<resources>
    <string name="app_name">ToursApp</string>

    <string name="facebook_app_id">2152632044827186</string>
    <string name="fb_login_protocol_scheme">fb2152632044827186</string>

    // error
    <string name="error">error</string>
    <string name="ok">OK</string>
    <string name="error_empty_mail_pass">Error empty email or pass</string>
    <string name="error_format_mail">Invalidate email</string>
    <string name="error_unknown">Unknown error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="slogan_1">Find your favorite</string>
    <string name="slogan_2">RECIPES</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="click_here">click here</string>
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="github">Github</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="mvvm">mvvm</string>
    <string name="ooops">Ooops</string>
    <string name="sorry_we_couldn_t_find_any_items">sorry we couldn\'t find any items</string>

</resources>
